Fix alignment of header totals

--- a/web/css/src/styles.css
+++ b/web/css/src/styles.css
@@ -1145,10 +1145,6 @@ form#vstobjects .alert {
   text-transform: lowercase;
 }
 
-.l-stat__col span {
-  padding-left: 15px;
-}
-
 .l-stat__col-title {
   text-transform: uppercase;
   font-weight: 600;
